Fix: Adjust the x button of the drawer menu to does not overlapp the wp admin bar.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1913,10 +1913,10 @@ button {
 	position: fixed;
 	top: 0;
 	right: 100%;
+	bottom: 60px;
 	z-index: 100;
 	width: 100%;
-	height: calc(100vh - 60px);
-	padding: 70px 0 30px;
+	padding-bottom: 0 0 30px;
 	background: rgba(0, 0, 0, 0.8);
 	transition: right 0.2s ease-in-out;
 }
@@ -1947,6 +1947,7 @@ button {
 
 .drawer__inner {
 	height: 100%;
+	padding-top: 70px;
 	overflow-y: scroll;
 }
 
